# mux-stream-macros

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: demux.rs  mux.rs
src/: demux.rs  ith_ident.rs  lib.rs  mux.rs
src/common/: concat_token_streams.rs  keywords.rs  mod.rs
tests/: demux.rs  mux.rs  test.rs
tests/demux/: fails_on_empty_arms.rs  fails_on_modifying_immut.rs  panics_on_empty_arms.rs
tests/mux/: fails_on_empty_input_streams.rs
tests/ui/demux/: enum_path_works.rs  fails_on_empty_arms.rs  fails_on_empty_arms.stderr  fails_on_empty_input_list.rs  fails_on_empty_input_list.stderr  fails_on_modifying_immut.rs  fails_on_modifying_immut.stderr  non_exhaustive_fails.rs  non_exhaustive_fails.stderr  output_streams_are_independent.rs  rest_pattern.rs  rest_pattern_fails.rs  rest_pattern_fails.stderr  works.rs
tests/ui/mux/: enum_path_works.rs  fails_on_empty_input_list.rs  fails_on_empty_input_list.stderr  fails_on_empty_input_streams.rs  fails_on_empty_input_streams.stderr  input_streams_are_independent.rs  works.rs
