[package]
name = "mux-stream-macros"
version = "0.1.0"
authors = ["Temirkhan Myrzamadi <hirrolot@gmail.com>"]
edition = "2018"
repository = "https://github.com/Hirrolot/mux-stream-macros"
documentation = "https://docs.rs/mux-stream-macros/"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["parsing"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
tokio = { version = "0.2", features = ["rt-core", "rt-threaded", "sync", "stream", "macros"] }
futures = "0.3"
trybuild = "1.0"
